<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.quizapp.MainActivity">

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/Question1" />

        <RadioGroup
            android:id="@+id/radioQuestion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Q1option_1" />

            <RadioButton
                android:id="@+id/radioOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Q1option_2" />

            <RadioButton
                android:id="@+id/radioOption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Q1option_3" />

        </RadioGroup>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/Question2" />

        <CheckBox
            android:id="@+id/checkbox_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Q2option_1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_bengali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Q2option_2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_marathi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Q2option_3"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/Question3" />

        <EditText
            android:id="@+id/question3_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Add Your Answer here" />


        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/Question4" />

        <RadioGroup
            android:id="@+id/radioQuestion4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio2Option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClickedQues4"
                android:text="@string/Q4option_1" />

            <RadioButton
                android:id="@+id/radio2Option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClickedQues4"
                android:text="@string/Q4option_2" />

            <RadioButton
                android:id="@+id/radio2Option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClickedQues4"
                android:text="@string/Q4option_3" />

        </RadioGroup>


        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/Question5" />

        <EditText
            android:id="@+id/editTextQuestion5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Add Your Answer here" />


        <Button
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitAnswer"
            android:text="@string/submit_button" />

    </LinearLayout>

</ScrollView>